...
    name: 'FullScreenModalOverSheet',
    slug: 'Modal/FullScreenModalOverSheet',
    getScreen: () => FullScreenModalOverSheetExample,
  },
  {
    name: 'E2E Test',
    slug: 'Modal/E2ETest',
    getScreen: () => E2ETestScreen,
  },
  {
    name: 'Dynamic Snap Point',
    slug: 'Modal/DynamicSnapPointExample',
    getScreen: () => DynamicSnapPointExample,
...
